[package]
name = "pktbatch-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
num_cpus = "1.17.0"
pnet = "0.35.0"
rand = "0.10.1"
rlimit = "0.11.0"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
xsk-rs = { git = "https://github.com/Packet-Batch/xsk-rs", branch = "master" }
